[package]
name = "jf-plonk"
description = "UltraPlonk implementation"
# can change back to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", features = [ "asm" ] }
ark-poly = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
derivative = { version = "2", features = ["use_core"], default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0", default-features = false }
hashbrown = { version = "0.13.2", default-features = false }
jf-primitives = { path = "../primitives", default-features = false }
jf-relation = { path = "../relation", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
merlin = { version = "3.0.0", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = { version = "^0.10", default-features = false }
tagged-base64 = { git = "https://github.com/espressosystems/tagged-base64", tag = "0.3.0", default-features = false }

[dev-dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
hex = "^0.4.3"

# Benchmarks
[[bench]]
name = "plonk-benches"
path = "benches/bench.rs"
harness = false

[features]
default = ["parallel"]
std = [
    "ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", "ark-poly/std",
    "jf-primitives/std", "jf-relation/std", "jf-utils/std", "sha3/std"
]
test_apis = [] # exposing apis for testing purpose
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "jf-relation/parallel", "jf-primitives/parallel",
            "dep:rayon" ]
test-srs = []

[[example]]
name = "proof-of-exp"
path = "examples/proof_of_exp.rs"
required-features = ["test-srs"]
