[package]
name = "jf-primitives"
description = "Cryptographic primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["sponge"] }
ark-ec = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4.0", default-features = false }
ark-ed-on-bn254 = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
blst = { git = "https://github.com/EspressoSystems/blst.git", branch = "no-std", default-features = false } # TODO: pin to a tag or commit
crypto_box = { version = "0.8.1", default-features = false, features = ["alloc", "u64_backend"] }
derivative = { version = "2", features = ["use_core"], default-features = false }
digest = { version = "0.10.1", default-features = false, features = ["alloc"] }
displaydoc = { version = "0.2.3", default-features = false }
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0", default-features = false }
generic-array = { version = "^0.14", default-features = false }
itertools = { version = "0.10.1", default-features = false, features = ["use_alloc"] }
jf-relation = { path = "../relation", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
merlin = { version = "3.0.0", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.1", default-features = false }
sha3 = { version = "0.10.5", default-features = false }
tagged-base64 = { git = "https://github.com/Cardinal-Cryptography/tagged-base64", tag = "0.3.0", default-features = false }
typenum = { version = "1.15.0", default-features = false, features = ["no_std"] }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
bincode = { version = "1.3", default-features = false }
criterion = { version = "0.4.0", default-features = false }
hashbrown = { version = "0.13.1", default-features = false }

[[bench]]
name = "merkle_path"
harness = false

[[bench]]
name = "pcs"
harness = false

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std",
    "ark-poly/std", "ark-crypto-primitives/std", "num-bigint/std",
    "num-traits/std", "sha2/std", "sha3/std", "zeroize/std",
    "itertools/use_std", "rand_chacha/std", "jf-utils/std", "jf-relation/std",
    "ark-bls12-377/std", "ark-bls12-381/std", "ark-bn254/std", "ark-bw6-761/std",
    "ark-ed-on-bls12-377/std", "ark-ed-on-bls12-381/std", "ark-ed-on-bn254/std", "blst/std", "crypto_box/std",
    "digest/std", "displaydoc/std", "espresso-systems-common/std", "itertools/use_std",
    "merlin/std", "serde/std"
]
print-trace = ["ark-std/print-trace"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "jf-utils/parallel",
    "jf-relation/parallel", "rayon"]
test-srs = []
