[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", features = [ "asm" ], default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
derivative = { version = "2", features = ["use_core"], default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = { version = "^1.0", default-features = false }
hashbrown = { version = "0.13.2", default-features = false }
jf-utils = { path = "../utilities", default-features = false  }
num-bigint = { version = "0.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false  }
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
ark-ed-on-bn254 = { version = "0.4.0", default-features = false }
itertools = { version = "0.10.1", default-features = false }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", 
        "ark-poly/std", "downcast-rs/std", "jf-utils/std", "num-bigint/std",
        "rand_chacha/std"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "dep:rayon" ]
