[package]
name = "jf-utils"
description = "Utilities for Jellyfish cryptographic library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false, features = [ "asm" ] }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
digest = { version = "0.10.1", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.1", default-features = false }
tagged-base64 = { git = "https://github.com/espressosystems/tagged-base64", tag = "0.3.0", default-features = false, features = ["ark-serialize", "serde"] }

[dev-dependencies]
ark-bls12-377 = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4.0", default-features = false }
ark-ed-on-bn254 = { version = "0.4.0", default-features = false }

[features]
default = []
std = ["ark-ff/std", "ark-std/std", "ark-ec/std", "ark-serialize/std", "digest/std", "serde/std", "sha2/std",
    "ark-bls12-377/std", "ark-bls12-381/std", "ark-bn254/std", "ark-ed-on-bls12-377/std","ark-ed-on-bls12-381/std", "ark-ed-on-bn254/std"]
parallel = ["ark-ff/parallel", "ark-std/parallel", "ark-ec/parallel", "dep:rayon"]
